--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -32,3 +32,25 @@ jobs:
       uses: gradle/gradle-build-action@bd5760595778326ba7f1441bcf7e88b49de61a25 # v2.6.0
       with:
         run : ./gradlew clean build --exclude-task test
+      
+    - name: Deploy BUILD
+      uses: appleboy/scp-action@v0.1.4
+      with:
+        host: ${{ secrets.FTP_HOST }}
+        username: ${{ secrets.FTP_NAME }}
+        password: ${{ secrets.FTP_PWD }}
+        port: ${{ secrets.FTP_PORT }}
+        source: "./build/libs/playground-0.0.1-SNAPSHOT.jar"
+        target: '/home/black9769/be'
+        
+    - name: Deploy Confirm
+      uses: appleboy/ssh-action@v1.0.0
+      with:
+        host: ${{ secrets.FTP_HOST }}
+        username: ${{ secrets.FTP_NAME }}
+        password: ${{ secrets.FTP_PWD }}
+        port: ${{ secrets.FTP_PORT }}
+        script: |
+         cd /home/black9769/be
+         echo -e "`ls -al`\n"
+        
