--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -32,8 +32,12 @@ jobs:
       uses: gradle/gradle-build-action@bd5760595778326ba7f1441bcf7e88b49de61a25 # v2.6.0
       with:
         run : ./gradlew clean build --exclude-task test
-    - name: List folders
-      run: ls -al .
+        
+    - uses: actions/upload-artifact@v3
+      with:
+        name: Package
+        path: build/libs
+        run: ls -al .
       
     - name: Deploy BUILD
       uses: appleboy/scp-action@v0.1.4
