--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -33,12 +33,6 @@ jobs:
       with:
         run : ./gradlew clean build --exclude-task test
         
-    - uses: actions/upload-artifact@v3
-      with:
-        name: Package
-        path: build/libs
-        run: ls -al .
-      
     - name: Deploy BUILD
       uses: appleboy/scp-action@v0.1.4
       with:
@@ -46,7 +40,7 @@ jobs:
         username: ${{ secrets.FTP_NAME }}
         password: ${{ secrets.FTP_PWD }}
         port: ${{ secrets.FTP_PORT }}
-        source: "./playground-0.0.1-SNAPSHOT.jar"
+        source: "./build/libs/*.jar"
         target: '/home/black9769/be'
         
     - name: Deploy Confirm
