--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -33,14 +33,11 @@ jobs:
       with:
         run: ./gradlew clean build
     
-      # 전송할 파일을 담을 디렉토리 생성
-    - name: Make Directory for deliver
-      run: mkdir deploy
           # Jar 파일 Copy
     - name: Copy Jar
-      run: cp ./build/libs/*.jar ./deploy/
+      run: cd ./build/libs/
     
     - name: check
-      run: "./deploy"
+      run: ls -al
       
         
