--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -34,14 +34,12 @@ jobs:
         run: ./gradlew clean build
         
         ## gradle build
-    - name: Build with Gradle
+    - name: bootJar with Gradle
       run: ./gradlew bootJar
 
           # Jar 파일 Copy
     - name: Copy Jar
-      run: cd ./build
+      run: ls ./build
     
-    - name: check
-      run: ls -al
       
         
