--- a/build.gradle
+++ b/build.gradle
@@ -31,9 +31,15 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-jdbc'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-web-services'
+
     implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.3.1'
+
     // https://mvnrepository.com/artifact/org.mariadb.jdbc/mariadb-java-client
     implementation group: 'org.mariadb.jdbc', name: 'mariadb-java-client', version: '3.0.8'
+
+    implementation 'org.springframework.boot:spring-boot-starter-amqp'
+    testImplementation 'org.springframework.amqp:spring-rabbit-test'
+
     compileOnly 'org.projectlombok:lombok'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     annotationProcessor 'org.projectlombok:lombok'
@@ -41,6 +47,7 @@ dependencies {
     //testImplementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter-test:2.3.1'
 
     implementation "com.github.ulisesbocchio:jasypt-spring-boot-starter:3.0.3"
+    runtimeOnly 'com.mysql:mysql-connector-j'
 }
 
 /*tasks.named('test') {
