--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,5 +21,8 @@ rabbitmq.queue.name= sample.queue
 rabbitmq.exchange.name= sample.exchange
 rabbitmq.routing.key= sample.key
 
+## MongoDB Configuration
+spring.data.mongodb.uri=mongodb://localhost:27017/playground
+
 
 
