[STUDY] filter로 ãresponseãㅏㅏ조작í

--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,5 @@ src/main/resources/application-secret.properties
 src/test/java/com/black9769/playground/JasyptTests.java
 
 start.sh
+/log/
+/http/
