--- a/build.gradle
+++ b/build.gradle
@@ -39,8 +39,10 @@ dependencies {
 
     implementation 'org.springframework.boot:spring-boot-starter-amqp'
     implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
-    implementation 'org.springframework.boot:spring-boot-starter-security'
     testImplementation 'org.springframework.amqp:spring-rabbit-test'
+
+    // 왜 5.7.10으로 들어가지지?
+    implementation 'org.springframework.boot:spring-boot-starter-security'
 
     compileOnly 'org.projectlombok:lombok'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
